namespace Axis.DataModeling.Domain.Enums;

public enum FieldType
{
    Text,
    Number,
    Boolean,
    Date,
    Enum,
    Relation,
    DataClass,
    File,
    Json
}
